stracture create html

--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
     <title>BMI Calculation</title>
 </head>
 <body>
-    
+    <h2>BMI Calculator</h2>
+    <p class="text">Height</p>
+    <input type="text" id="height">
+    <p class="text">Weight</p>
+    <input type="text" id="weight">
+    <p id="result"></p>
+    <button id="btn" onclick="bmi()">Calculate</button>
+    <p id="info">Please enter height [cm] and weight [kg]</p>
 </body>
 </html>
