--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>BMI Calculation</title>
 </head>
 <body>
+   <div>
     <h2>BMI Calculator</h2>
     <p class="text">Height</p>
     <input type="text" id="height">
@@ -16,5 +17,6 @@
     <p id="result"></p>
     <button id="btn" onclick="bmi()">Calculate</button>
     <p id="info">Please enter height [cm] and weight [kg]</p>
+   </div>
 </body>
 </html>
