--- a/index.html
+++ b/index.html
@@ -18,5 +18,6 @@
     <button id="btn" onclick="bmi()">Calculate</button>
     <p id="info">Please enter height [cm] and weight [kg]</p>
    </div>
+   <script src="index.js"></script>
 </body>
 </html>
