--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <p class="text">Weight</p>
     <input type="text" id="weight">
     <p id="result"></p>
+    <p id="message"></p>
     <button id="btn" onclick="bmi()">Calculate</button>
     <p id="info">Please enter height [cm] and weight [kg]</p>
    </div>
