--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css">
     <title>BMI Calculation</title>
 </head>
@@ -16,7 +17,8 @@
     <input type="text" id="weight">
     <p id="result"></p>
     <p id="message"></p>
-    <button id="btn" onclick="bmi()">Calculate</button>
+    <button id="btn" onclick="bmi()">Calculate</button> &nbsp &nbsp &nbsp
+    <button class="btn-reset" onclick="reset()"><i class="fas fa-power-off"></i></button>
     <p id="info">Please enter height [cm] and weight [kg]</p>
    </div>
    <script src="index.js"></script>
