--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <input type="text" id="weight">
     <p id="result"></p>
     <p id="message"></p>
-    <button id="btn" onclick="bmi()">Calculate</button> &nbsp &nbsp &nbsp
-    <button class="btn-reset" onclick="reset()"><i class="fas fa-power-off"></i></button>
+    <button id="btn" onclick="bmi()">Calculate</button> &nbsp &nbsp &nbsp &nbsp
+    <button class="btn-reset" onclick="reset()"><i class="fas fa-sync-alt"></i></button>
     <p id="info">Please enter height [cm] and weight [kg]</p>
    </div>
    <script src="index.js"></script>
